--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,17 @@
         "doctrine/dbal": "^2.9",
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
+        "graham-campbell/markdown": "^10.3",
         "guzzlehttp/guzzle": "^6.3",
         "itsgoingd/clockwork": "^3.1",
         "laravel-admin-ext/helpers": "^1.1",
+        "laravel-frontend-presets/inertiajs": "dev-master",
         "laravel/framework": "5.8.*",
-        "laravel/scout": "^7.1",
+        "laravel/scout": "^5.0",
         "laravel/tinker": "^1.0",
-        "prettus/l5-repository": "^2.6"
+        "mccool/laravel-auto-presenter": "^7.2",
+        "prettus/l5-repository": "^2.6",
+        "tamayo/laravel-scout-elastic": "^4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -47,6 +51,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+
         ]
     },
     "autoload-dev": {
